fix bounce overflow issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,7 +15,7 @@ body {
   background-image: url('../images/background.png');
   background-size: cover;
   background-repeat: no-repeat;
-
+  overflow: hidden;
 }
 
 .header {
